# RealTime-Audio-Denoise-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: generate_data.py
src/: main.cpp
